<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_image"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_xlarge">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="100dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/img_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userNameHint"
                    android:textColor="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/input_text_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/forgot_password"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_text_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:backgroundTint="@android:color/white"
                android:enabled="false"
                android:padding="@dimen/margin_card_medium_2"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                app:cornerRadius="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:padding="10dp"
                android:paddingLeft="100dp"
                android:paddingTop="10dp"
                android:paddingRight="100dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

            <TextView
                android:id="@+id/tv_connect_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/or_connect_with"
                android:textColor="@color/browser_actions_bg_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="@+id/btnGoogle"
                app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnGoogle" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnFacebook"
                app:layout_constraintTop_toBottomOf="@+id/tv_connect_with" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_image"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:textColor="@android:color/white"
            tools:text="MUNG MUGN" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:gravity="center"
            android:textColor="@android:color/white"
            tools:text="aunga@a.com" />

        <TextView
            android:id="@+id/tvProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:gravity="center"
            android:textColor="@android:color/white"
            tools:text="Google" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:backgroundTint="@android:color/white"
            android:padding="@dimen/margin_card_medium_2"
            android:text="@string/logout"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="30dp"
            app:rippleColor="@color/com_facebook_blue" />

    </LinearLayout>
</RelativeLayout>